--- a/HM1/HM1.ipynb
+++ b/HM1/HM1.ipynb
@@ -19,16 +19,16 @@
     "phrase_2 = 'а в этой фразе 26 символов'\n",
     "\n",
     "if len(phrase_1) > len(phrase_2):\n",
-    "    print ('Фраза 1 длиннее фразы 2')\n",
+    "    print('Фраза 1 длиннее фразы 2')\n",
     "elif len(phrase_1) < len(phrase_2):\n",
     "    print ('Фраза 2 длиннее фразы 1')\n",
     "elif len(phrase_1) == len(phrase_2):\n",
-    "    print ('Фразы равной длины')"
+    "    print('Фразы равной длины')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "id": "e0079225",
    "metadata": {},
    "outputs": [
@@ -36,14 +36,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Введите год 2013\n",
+      "Введите год 1000\n",
       "Обычный год\n"
      ]
     }
    ],
    "source": [
     "Year = int(input('Введите год '))\n",
-    "if Year % 4 == 0:\n",
+    "if (Year % 4 == 0) and (Year % 400 == 0) or (Year % 100 != 0):\n",
     "    print('Високостный год')\n",
     "else:\n",
     "    print('Обычный год')"
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "id": "ce54930e",
    "metadata": {},
    "outputs": [
@@ -59,13 +59,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Введите MM-DD рождения: 10-26\n",
-      "Скорпион\n"
+      "Введите MM-DD рождения: 07-14\n",
+      "Рак\n"
      ]
     }
    ],
    "source": [
-    "BD = str(input('Введите MM-DD рождения: '))\n",
+    "BD = (input('Введите MM-DD рождения: '))\n",
     "\n",
     "if '01-20' <= BD <= '02-18':\n",
     "    print('Водолей')\n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 5,
    "id": "217837fd",
    "metadata": {},
    "outputs": [
@@ -103,23 +103,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Коробка № 3\n"
+      "Коробка № 2\n"
      ]
     }
    ],
    "source": [
-    "width = 15\n",
-    "length = 15\n",
-    "height = 15\n",
+    "width = 20\n",
+    "length = 40\n",
+    "height = 20\n",
     "\n",
     "if width < 15 and length < 15 and height < 15:\n",
     "    print('Коробка № 1')\n",
-    "elif 15 < width < 50 and 15 < length < 50 and 15 < height < 50:\n",
-    "    print ('Коробка № 2')\n",
+    "elif 15 < width < 50 or 15 < length < 50 or 15 < height < 50:\n",
+    "    print('Коробка № 2')\n",
     "elif length > 200:\n",
-    "    print ('Упаковка для лыж')\n",
+    "    print('Упаковка для лыж')\n",
     "else:\n",
-    "    print ('Коробка № 3')"
+    "    print('Коробка № 3')"
    ]
   }
  ],
