--- a/HM1/HM1.ipynb
+++ b/HM1/HM1.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "id": "ce54930e",
    "metadata": {},
    "outputs": [
@@ -59,8 +59,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Введите MM-DD рождения: 07-14\n",
-      "Рак\n"
+      "Введите MM-DD рождения: 01-15\n",
+      "Козерог\n"
      ]
     }
    ],
@@ -89,7 +89,9 @@
     "    print('Скорпион')\n",
     "elif '11-22' <= BD <= '12-21':\n",
     "    print('Стрелец')\n",
-    "elif '12-22' <= BD <= '01-19':\n",
+    "elif '12-22' <= BD <= '12-31':\n",
+    "    print('Козерог')\n",
+    "elif '01-01' <= BD <= '01-19':\n",
     "    print('Козерог')"
    ]
   },
