--- a/HM2/HM2.ipynb
+++ b/HM2/HM2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1c5c2d5d",
+   "id": "515259d5",
    "metadata": {},
    "source": [
     "Задание 1"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "dc4b2f52",
+   "id": "aab2d56e",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0e09e2d",
+   "id": "c50fefae",
    "metadata": {},
    "source": [
     "Задание 2"
@@ -40,8 +40,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
-   "id": "eea157a9",
+   "execution_count": 3,
+   "id": "e1e1dff0",
    "metadata": {},
    "outputs": [
     {
@@ -49,10 +49,18 @@
      "output_type": "stream",
      "text": [
       "Введите число 1\n",
-      "Введите число 4\n",
-      "Введите число 6\n",
-      "Введите число 0\n",
-      "Результат 0\n"
+      "Введите число 4\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'y' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-604304de9ad5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mwhile\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Введите число '\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[1;32mpass\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Результат'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'y' is not defined"
      ]
     }
    ],
@@ -60,14 +68,13 @@
     "x = int(input('Введите число '))\n",
     "while x != 0:\n",
     "    x = int(input('Введите число '))\n",
-    "    y = x + x\n",
-    "    pass\n",
+    "    y = y + x\n",
     "print('Результат', y)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ac926caf",
+   "id": "d4361bce",
    "metadata": {},
    "source": [
     "Задание 3"
@@ -75,14 +82,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
-   "id": "aae38a45",
+   "execution_count": 26,
+   "id": "d6a702e6",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Идеальные пара:\n",
       "Alex и Emma\n",
       "Arthur и Kate\n",
       "John и Kira\n",
@@ -92,23 +100,22 @@
     }
    ],
    "source": [
-    "boys = ['Peter', 'Alex', 'John', 'Arthur', 'Richard']\n",
+    "boys = ['Peter','Alex', 'John', 'Arthur', 'Richard']\n",
     "girls = ['Kate', 'Liza', 'Kira', 'Emma', 'Trisha']\n",
-    "list.sort(boys)\n",
-    "list.sort(girls)\n",
-    "if len(boys) == len(girls):\n",
-    "    print(boys[0], 'и', girls[0])\n",
-    "    print(boys[1], 'и', girls[1])\n",
-    "    print(boys[2], 'и', girls[2])\n",
-    "    print(boys[3], 'и', girls[3])\n",
-    "    print(boys[4], 'и', girls[4])\n",
+    "if len(boys)==len(girls):\n",
+    "    print(\"Идеальные пара:\")\n",
+    "    boys.sort()\n",
+    "    girls.sort()\n",
+    "    dating = zip(boys, girls)\n",
+    "    for couple in dating:\n",
+    "        print(couple[0], 'и', couple[1])\n",
     "else:\n",
-    "    print('Внимание, кто-то может остаться без пары!')"
+    "    print(\"Внимание, кто-то может остаться без пары!\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "38fbf7ee",
+   "id": "411bdab9",
    "metadata": {},
    "source": [
     "\n",
@@ -117,19 +124,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
-   "id": "ef1121c6",
+   "execution_count": 25,
+   "id": "d107bfb4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Средняя температура в странах:\n",
-      " Thailand 23.85714285714285 C\n",
-      " Germany 13.799999999999999 C\n",
-      " Russia 3.714285714285717 C\n",
-      " Poland 11.999999999999996 C\n"
+      "Thailand 23.857142857142854\n",
+      "Germany 13.799999999999999\n",
+      "Russia 3.714285714285717\n",
+      "Poland 11.999999999999998\n"
      ]
     }
    ],
@@ -140,22 +146,9 @@
     "['Russia', [35.6, 37.4, 39.2, 41, 42.8, 39.2, 35.6]],\n",
     "['Poland', [50, 50, 53.6, 57.2, 55.4, 55.4]]\n",
     "]\n",
-    "new_list = [item for sublist in countries_temperature for item in sublist]\n",
-    "print(f'Средняя температура в странах:\\n '\n",
-    "    'Thailand', (sum(new_list[1]) / len(new_list[1]) - 32) * 5/9, 'C\\n',\n",
-    "    'Germany', (sum(new_list[3]) / len(new_list[3]) - 32) * 5/9, 'C\\n',\n",
-    "    'Russia', (sum(new_list[5]) / len(new_list[5]) - 32) * 5/9, 'C\\n',\n",
-    "    'Poland', (sum(new_list[7]) / len(new_list[7]) - 32) * 5/9, 'C'\n",
-    ")"
+    "for countries in countries_temperature:\n",
+    "    print(countries[0], ((sum(countries[1]) / len(countries[1])-32) * (5/9)))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2f1b9550",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
