--- a/HM2/HM2.ipynb
+++ b/HM2/HM2.ipynb
@@ -23,11 +23,12 @@
     }
    ],
    "source": [
-    "word = 'qwert'\n",
+    "word = 'qwerty'\n",
+    "half_word = len(word) / 2\n",
     "if len(word) % 2 == 0:\n",
-    "    print(word[2:4])\n",
+    "    print(word[int(half_word)-1], word[int(half_word)])\n",
     "elif len(word) % 2 != 0:\n",
-    "    print(word[2])"
+    "    print(word[int(half_word)])"
    ]
   },
   {
@@ -66,10 +67,11 @@
    ],
    "source": [
     "x = int(input('Введите число '))\n",
+    "sum = 0\n",
     "while x != 0:\n",
+    "    sum += x\n",
     "    x = int(input('Введите число '))\n",
-    "    y = y + x\n",
-    "print('Результат', y)"
+    "print('Результат', sum)"
    ]
   },
   {
