--- a/HM3.1/HM3.ipynb
+++ b/HM3.1/HM3.ipynb
@@ -10,26 +10,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 18,
    "id": "7a3f3fac",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{15, 35, 54, 98, 119, 213}"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{98, 35, 15, 213, 54, 119}\n"
+     ]
     }
    ],
    "source": [
     "ids = {'user1': [213, 213, 213, 15, 213],\n",
     "'user2': [54, 54, 119, 119, 119],\n",
     "'user3': [213, 98, 98, 35]}\n",
-    "set(ids['user1']+ids['user2']+ids['user3'])"
+    "newids = []\n",
+    "for numeral in ids.values():\n",
+    "    for one_line in numeral:     \n",
+    "        newids.append(one_line)\n",
+    "print(set(newids))"
    ]
   },
   {
@@ -42,39 +43,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
-   "id": "355dfade",
+   "execution_count": 86,
+   "id": "da5757e3",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Поисковых запросов, содержащих 2 слов(а):  42.857142857142854 %\n",
-      "Поисковых запросов, содержащих 3 слов(а):  57.14285714285714 %\n"
+      "Поисковых запросов, содержащих 3 слов(а): 57.14285714285714 %\n",
+      "Поисковых запросов, содержащих 2 слов(а): 42.857142857142854 %\n"
      ]
     }
    ],
    "source": [
     "queries = [\n",
-    "'смотреть сериалы онлайн',\n",
-    "'новости спорта',\n",
-    "'афиша кино',\n",
-    "'курс доллара',\n",
-    "'сериалы этим летом',\n",
-    "'курс по питону',\n",
-    "'сериалы про спорт',\n",
+    "    'смотреть сериалы онлайн',\n",
+    "    'новости спорта',\n",
+    "    'афиша кино',\n",
+    "    'курс доллара',\n",
+    "    'сериалы этим летом',\n",
+    "    'курс по питону',\n",
+    "    'сериалы про спорт',\n",
     "]\n",
-    "two_words = 0\n",
-    "three_words = 0\n",
-    "for words in queries:\n",
-    "    if len(words.split()) == 2:\n",
-    "        two_words += 1\n",
+    "dic_ = {}\n",
+    "for query in queries:\n",
+    "    words = query.split()\n",
+    "    if len(words) in dic_.keys():\n",
+    "        dic_[len(words)] += 1\n",
     "    else:\n",
-    "        three_words += 1\n",
-    "total_summ = two_words + three_words\n",
-    "print('Поисковых запросов, содержащих 2 слов(а): ', (two_words / total_summ)*100, '%')\n",
-    "print('Поисковых запросов, содержащих 3 слов(а): ', (three_words / total_summ)*100, '%')"
+    "        dic_.update({len(words):1})\n",
+    "for key, value in dic_.items():\n",
+    "    print('Поисковых запросов, содержащих', key, 'слов(а):', value / len(queries) * 100, '%')"
    ]
   },
   {
