--- a/HM4/HM4.ipynb
+++ b/HM4/HM4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1174,
+   "execution_count": 1,
    "id": "036948e5",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1175,
+   "execution_count": 2,
    "id": "035823b1",
    "metadata": {},
    "outputs": [],
@@ -29,57 +29,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e78e293c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Введите команду: p\n",
-      "Введите номер документа: 11-2\n",
-      "Владелец документа:  Геннадий Покемонов\n",
-      "11-2\n",
-      "Введите команду: s\n",
-      "Документ хранится на полке № 2\n",
-      "Введите команду: l\n",
-      "№:2207 876234, тип:passport, владелец:Василий Гупкин, полка хранения: Документ хранится на полке № 1\n",
-      "№:11-2, тип:invoice, владелец:Геннадий Покемонов, полка хранения: Документ хранится на полке № 1\n",
-      "№:10006, тип:insurance, владелец:Аристарх Павлов, полка хранения: Документ хранится на полке № 2\n",
-      "None\n",
-      "Введите команду: as\n",
-      "Введите номер новой полки: 10\n",
-      "Полка добавлена. Текущий перечень полок: 1, 2, 3, 10\n",
-      "10\n",
-      "Введите команду: ds\n",
-      "Полка удалена. Текущий перечень полок: 1,2,3\n",
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "def main(documents, directories):\n",
-    "    while True:\n",
-    "        command = input('Введите команду: ')\n",
-    "        if command == 'p':\n",
-    "            print(doc_owner(documents))\n",
-    "        elif command == 's':\n",
-    "            print(doc_number('10006'))\n",
-    "        elif command == 'l':\n",
-    "            print(all_doc())\n",
-    "        elif command == 'as':\n",
-    "            print(add_shelf())\n",
-    "        elif command == 'ds':\n",
-    "            print(delete_shelf('10'))\n",
-    "        elif command == 'q':\n",
-    "            break\n",
-    "        \n",
-    "main(documents, directories)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "32bf1ec0",
    "metadata": {},
@@ -89,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1114,
+   "execution_count": 3,
    "id": "d7a87e7e",
    "metadata": {},
    "outputs": [
@@ -97,23 +46,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Введите номер документа: 10006\n",
-      "Владелец документа:  Аристарх Павлов\n"
+      "Введите номер документа: 11-2\n",
+      "Владелец документа:  Геннадий Покемонов\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'10006'"
+       "'11-2'"
       ]
      },
-     "execution_count": 1114,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def doc_owner(documents):\n",
+    "def doc_owner():\n",
     "    num = input('Введите номер документа: ')\n",
     "    for dictionary in documents:\n",
     "        if dictionary['number'] == num:\n",
@@ -122,7 +71,7 @@
     "    else:\n",
     "        print('Документ не найден в базе')\n",
     "    return num\n",
-    "doc_owner(documents)"
+    "doc_owner()"
    ]
   },
   {
@@ -135,36 +84,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1167,
-   "id": "f983e771",
+   "execution_count": 55,
+   "id": "dad46025",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Введите номер документа: 10006\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'Документ хранится на полке № 2'"
       ]
      },
-     "execution_count": 1167,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def doc_number(num):\n",
-    "    for shelf, number in directories.items():\n",
-    "            if  num in number:\n",
-    "                return(f'Документ хранится на полке № {shelf}')\n",
-    "            \n",
+    "def doc_number():\n",
+    "    doc_num = input(\"Введите номер документа: \")\n",
+    "    for shelf, number in directories.items():  \n",
+    "        if  doc_num in number:\n",
+    "            return f'Документ хранится на полке № {shelf}'\n",
+    "            break\n",
     "    else:\n",
-    "        return('Документ не найден в базе')\n",
+    "        return 'Документ не найден в базе'\n",
     "\n",
-    "doc_number('10006')"
+    "doc_number()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7f14d1bc",
+   "id": "b8c5e07b",
    "metadata": {},
    "source": [
     "Пункт 3. Пользователь по команде “l” может увидеть полную информацию по всем документам"
@@ -172,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1168,
+   "execution_count": 70,
    "id": "0a2d8043",
    "metadata": {},
    "outputs": [
@@ -180,23 +137,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "№:2207 876234, тип:passport, владелец:Василий Гупкин, полка хранения: Документ хранится на полке № 1\n",
-      "№:11-2, тип:invoice, владелец:Геннадий Покемонов, полка хранения: Документ хранится на полке № 1\n",
-      "№:10006, тип:insurance, владелец:Аристарх Павлов, полка хранения: Документ хранится на полке № 2\n"
+      "№:2207 876234, тип:passport, владелец:Василий Гупкин, полка хранения: <function doc_number at 0x0000028693F244C0>\n",
+      "№:11-2, тип:invoice, владелец:Геннадий Покемонов, полка хранения: <function doc_number at 0x0000028693F244C0>\n",
+      "№:10006, тип:insurance, владелец:Аристарх Павлов, полка хранения: <function doc_number at 0x0000028693F244C0>\n"
      ]
     }
    ],
    "source": [
     "def all_doc():\n",
     "    for direct in documents:\n",
-    "        print(f\"№:{direct['number']}, тип:{direct['type']}, владелец:{direct['name']}, полка хранения: {doc_number(direct['number'])}\")\n",
+    "        print(f\"№:{direct['number']}, тип:{direct['type']}, владелец:{direct['name']}, полка хранения: {doc_number}\")\n",
     "\n",
     "all_doc()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b8d43024",
+   "id": "aa7daba7",
    "metadata": {},
    "source": [
     "Пункт 4. Пользователь по команде “as” может добавить новую полку"
@@ -204,25 +161,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1183,
-   "id": "267cdd6c",
+   "execution_count": 72,
+   "id": "71aa5c51",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Введите номер новой полки: 10\n",
-      "Полка добавлена. Текущий перечень полок: 1, 2, 3, 10\n"
+      "Введите номер новой полки: 7\n",
+      "Такая полка уже существует. Текущий перечень полок: 1, 2, 3, 7\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'10'"
+       "'7'"
       ]
      },
-     "execution_count": 1183,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d8c5008",
+   "id": "77a697d1",
    "metadata": {},
    "source": [
     "Пункт 5. Пользователь по команде “ds” может удалить существующую полку из данных (только если она пустая)"
@@ -250,8 +207,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1184,
-   "id": "14c3c986",
+   "execution_count": 73,
+   "id": "6b8f49e1",
    "metadata": {},
    "outputs": [
     {
@@ -275,6 +232,65 @@
     "        print(f'Такой полки не существует. Текущий перечень полок: {\",\".join(directories)}')\n",
     "\n",
     "print(delete_shelf('10'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "3d94889d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Введите команду: as\n",
+      "Введите номер новой полки: 10\n",
+      "Полка добавлена. Текущий перечень полок: 1, 2, 3, 6, 10\n",
+      "10\n",
+      "Введите команду: ds\n",
+      "Полка удалена. Текущий перечень полок: 1,2,3,6\n",
+      "None\n",
+      "Введите команду: p\n",
+      "Введите номер документа: 10006\n",
+      "Владелец документа:  Аристарх Павлов\n",
+      "10006\n",
+      "Введите команду: s\n",
+      "Введите номер документа: 10006\n",
+      "Документ хранится на полке № 2\n",
+      "Введите команду: l\n",
+      "№:2207 876234, тип:passport, владелец:Василий Гупкин, полка хранения: <function doc_number at 0x0000028693F244C0>\n",
+      "№:11-2, тип:invoice, владелец:Геннадий Покемонов, полка хранения: <function doc_number at 0x0000028693F244C0>\n",
+      "№:10006, тип:insurance, владелец:Аристарх Павлов, полка хранения: <function doc_number at 0x0000028693F244C0>\n",
+      "Введите команду: as\n",
+      "Введите номер новой полки: 10\n",
+      "Полка добавлена. Текущий перечень полок: 1, 2, 3, 6, 10\n",
+      "10\n",
+      "Введите команду: ds\n",
+      "Полка удалена. Текущий перечень полок: 1,2,3,6\n",
+      "None\n",
+      "Введите команду: q\n"
+     ]
+    }
+   ],
+   "source": [
+    "def main(documents, directories):\n",
+    "    while True:\n",
+    "        command = input('Введите команду: ')\n",
+    "        if command == 'p':\n",
+    "            print(doc_owner())\n",
+    "        elif command == 's':\n",
+    "            print(doc_number())\n",
+    "        elif command == 'l':\n",
+    "            all_doc()\n",
+    "        elif command == 'as':\n",
+    "            print(add_shelf())\n",
+    "        elif command == 'ds':\n",
+    "            print(delete_shelf('10'))\n",
+    "        elif command == 'q':\n",
+    "            break\n",
+    "        \n",
+    "main(documents, directories)"
    ]
   }
  ],
