--- a/HM6/HM6.ipynb
+++ b/HM6/HM6.ipynb
@@ -137,16 +137,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "fca53220",
+   "execution_count": 31,
+   "id": "944ae4b6",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Введите начальную дату в формате YYYY-MM-DD: 2000-02-29\n",
-      "Введите дату окончания в формате YYYY-MM-DD: 2000-02-25\n"
+      "Введите начальную дату в формате YYYY-MM-DD: 2000-01-15\n",
+      "Введите дату окончания в формате YYYY-MM-DD: 2000-01-10\n"
      ]
     },
     {
@@ -155,7 +155,7 @@
        "[]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,17 +163,20 @@
    "source": [
     "from datetime import datetime, timedelta\n",
     "\n",
-    "start_date=input('Введите начальную дату в формате YYYY-MM-DD: ')\n",
-    "end_date=input('Введите дату окончания в формате YYYY-MM-DD: ')\n",
+    "start_date = input('Введите начальную дату в формате YYYY-MM-DD: ')\n",
+    "end_date = input('Введите дату окончания в формате YYYY-MM-DD: ')\n",
     "def date_range():\n",
-    "    start_dt=datetime.strptime(start_date,'%Y-%m-%d')\n",
-    "    end_dt=datetime.strptime(end_date,'%Y-%m-%d')\n",
-    "    days=[]\n",
-    "    while start_dt<=end_dt:\n",
-    "        start_dt+=timedelta(days=1)\n",
-    "        print_datetime=datetime.strftime(start_dt,'%Y-%m-%d')\n",
-    "        days.append(print_datetime)\n",
-    "    return(days)\n",
+    "    try:\n",
+    "        start_dt = datetime.strptime(start_date,'%Y-%m-%d')\n",
+    "        end_dt = datetime.strptime(end_date,'%Y-%m-%d')\n",
+    "        days = []\n",
+    "        while start_dt <= end_dt:\n",
+    "            start_dt += timedelta(days=1)\n",
+    "            print_datetime = datetime.strftime(start_dt,'%Y-%m-%d')\n",
+    "            days.append(print_datetime)\n",
+    "        return(days)\n",
+    "    except ValueError:\n",
+    "        return []\n",
     "date_range()"
    ]
   }
